changed syntax of refinement composition examples, see #274

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3611,10 +3611,10 @@ refinement R3' =
 end
 
 refinement R3'' = 
- Monoid refined via Elem |-> Nat to Nat then R2
+ Monoid refined via Elem |-> Nat to Nat refined to R2
 end
 
-refinement R3''' = R1 then R2
+refinement R3''' = R1 refined to R2
 
 \end{lstlisting}
 
@@ -11229,7 +11229,7 @@ interpretation IRI : OMS to OMS = \%cons SymbolMap  &  Engine\\\hline
 interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
 refinement IRI = OMS refined via SymbolMap to OMS & section~\ref{spec-2} \\\hline
 refinement IRI = OMS refined via translation IRI to OMS & section~\ref{model-2} \\\hline
-refinement IRI = IRI then IRI & section~\ref{spec-2} \\\hline
+refinement IRI = IRI refined to IRI & section~\ref{spec-2} \\\hline
 refinement IRI = Network refined to Network & section~\ref{model-1} \\\hline
 entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
 entailment IRI = OMSName in Network entails OMS & section~\ref{model-1}\\\hline
